# brabbit_opengl_demo

./: CMakeLists.txt  readme.md
resource/model/: cube.stl
resource/shader/: cube.fs  cube.vs  flat.fs  light_cube.vs  phong.fs
source/: camera.cpp  camera.hpp  main.cpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
source/brabbit/: camera.cpp  camera.hpp  flat_shader.cpp  flat_shader.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_object.cpp  model_object.hpp  phong_shader.cpp  phong_shader.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
